# boydmeredith_bings_model_demo

./: .gitignore  Bings Model Demo.ipynb  README.md  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
docs/: conf.py  index.rst  usage.rst
docs/source/: modules.rst
src/: __init__.py  bings_model.py  model_ui.py
src/bings_model_demo/: __init__.py  bings_model.py  gui.py  model.py  model_ui.py  plots.py
tests/: test_adaptation.py  test_makeclicktrain.py
