[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bings_model_demo"
version = "0.0.1"
authors = [
    { name="Tyler Boyd-Meredith", email="jboydmeredith@gmail.com"},
    ]
description = "Example package"
readme = "README.md"
requires-python = ">=3.7"
classifers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/boydmeredith/bings_model_demo"
"Bug Tracker" = "https://github.com/boydmeredith/bings_model_demo/issues"
